<resources>
    <string name="app_name">Black And White</string>

    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="best_score">Best Score</string>
    <string name="quit">Quit</string>

    <string name="score">Score</string>
    <string name="game_over">Game Over</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quit_msg">Quit the Game ?</string>


</resources>
